bugfix: top right item of the header not correctly aligned on Samsung browser and Safari...

--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_header.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_header.scss
@@ -163,7 +163,7 @@
     width: 100%;
     .social-header {
         display: flex;
-        justify-content: right;
+        justify-content: end;
         margin-top: 20px;
         margin-right: 10px;
         .lang {
